--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ div {
     width: 160px;
     height: 50px;
     margin: 0 auto;
-    border-radius: 15%;
+    border-radius: 25px;
 }
 
 #board {
@@ -37,7 +37,11 @@ div {
     grid-row: 3;
     background-image: url("../images/game_board.svg");
     background-size: cover;
-    /* display: grid;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr; */
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.cell {
+ width: 75px;
+ height: 75px;
 }
