--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,19 @@ div {
  width: 75px;
  height: 75px;
 }
+
+
+/* animation for falling piece */
+.fall {
+    animation-name: fall-animation;
+    animation-duration: 500ms;
+  }
+  
+  @keyframes fall-animation {
+    from {
+      transform: translateY(-200px);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
