--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ div {
     margin: 0;
 }
 
+.c-top {
+    color: aliceblue;
+    padding-top: 150px;
+}
+
 .main-grid {
     width: 100vw;
     height: 100vh;
@@ -38,6 +43,7 @@ div {
 }
 
 #board {
+    width: max-content;
     grid-column: 2;
     grid-row: 3;
     background-image: url("../images/game_board.svg");
@@ -50,19 +56,3 @@ div {
     width: 75px;
     height: 75px;
 }
-
-
-/* animation for falling piece
-.fall {
-    animation-name: fall-animation;
-    animation-duration: 500ms;
-}
-  
-@keyframes fall-animation {
-    from {
-      transform: translateY(-200px);
-    }
-    to {
-      transform: translateY(0);
-    }
-} */
