--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,18 @@ div {
 .player2 {
     background-image: url("../images/yellow_game_piece.svg.svg");	
 }
+
+/* animation for falling cell
+.fall {
+    animation-name: fall-animation;
+    animation-duration: 500ms;
+}
+  
+@keyframes fall-animation {
+    from {
+      transform: translateY(-200px);
+    }
+    to {
+      transform: translateY(0);
+    }
+} */
